[package]
name = "elm-arch-examples"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"
license = "CC0-1.0"

[lib]
name = "elm_arch"
path = "src/lib.rs"

[[bin]]
name = "random"
path = "src/random.rs"

[[bin]]
name = "http"
path = "src/http.rs"

[[bin]]
name = "time"
path = "src/time.rs"

[[bin]]
name = "websocket"
path = "src/websocket.rs"

[dependencies]
anyhow = "1.0.32"
futures = "0.3.5"
hyper = "0.13.8"
hyper-tls = "0.4.3"
rand = "0.7.3"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["macros", "io-std"]}
tokio-tungstenite = "0.11.0"
url = "2.1.1"
