[package]
name = "elm-arch-examples"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2021"

[lib]
name = "elm_arch"
path = "src/lib.rs"

[[bin]]
name = "random"
path = "src/random.rs"

[[bin]]
name = "http"
path = "src/http.rs"

[[bin]]
name = "time"
path = "src/time.rs"

[[bin]]
name = "websocket"
path = "src/websocket.rs"

[dependencies]
anyhow = "1.0.64"
futures = "0.3.24"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["macros", "io-std", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["io-util"] }
tokio-tungstenite = "0.17.2"
tokio-util = "0.7.11"
